--- a/src/global.css
+++ b/src/global.css
@@ -2,9 +2,15 @@
 
 :root {
   --color-gray: rgba(15, 20, 25, 0.1);
+  --color-gray-light: rgba(15, 20, 25, 0.03);
+  --color-gray-dark: rgba(15, 20, 25, 0.7);
   --color-primary: rgb(29, 155, 240);
   --color-primary-light: rgba(29, 155, 240, 0.1);
   --color-primary-dark: rgb(31, 147, 224);
+  --color-green: rgb(0, 186, 124);
+  --color-green-light: rgba(0, 186, 124, 0.1);
+  --color-red: rgb(249, 24, 128);
+  --color-red-light: rgba(249, 24, 128, 0.1);
 
   --font-primary: 'Lato', sans-serif;
 }
@@ -40,8 +46,16 @@ html {
   color: var(--color-primary);
 }
 
+.color-gray-dark {
+  color: var(--color-gray-dark);
+}
+
 .bg-gray {
   background-color: var(--color-gray);
+}
+
+.f8 {
+  font-size: 0.5rem;
 }
 
 .w125 {
